--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -5,6 +5,13 @@
     flex-direction: $direction;
 }
 
+@mixin centeredGrid($columns) {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: $columns;
+}
+
 @mixin mediaQuery($max-width) {
     @media screen and (max-width:$max-width) {
         @content;
