--- a/sass/main.scss
+++ b/sass/main.scss
@@ -30,7 +30,7 @@
         --tagline-font-size : 1.2rem;
         --icon-height: 28px;
         --large-icon-height: 45px;
-        --fab-margin: 30px;
+        --fab-margin: 20px;
     }
 
     .letter-container .mail-box-image {
